Fix code blocks on dark mode

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1496,7 +1496,7 @@ l {
 
 }
 
-[data-theme='light'] .language-surql, .language-rust, .language-ts, .language-go, .language-java, .language-csharp, .language-python, .language-json, .language-javascript, .language-bash, .language-yml, .language-js, , .language-yaml {
+[data-theme='light'] [class^='language'] {
   .token.operator { background:none; }
   .token.comment { color:#737e98 !important; }
   .token.punctuation { color:#000000 !important; }
